<resources>
    <string name="app_name">CampusGuessr</string>
    <string name="distance">Distance:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="start_button_text">Start Challenge</string>
    <string name="reroll_button_text">Reroll (X rerolls remaining)</string>
    <string name="navigate_profile_tab_description">An icon of a person</string>
    <string name="navigate_create_tab_description">An icon of a camera</string>
    <string name="navigate_play_tab_description">An icon of a map</string>
    <string name="navigate_ranking_tab_description">An icon of a badge</string>
    <string name="guess_button_text">Guess Here</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="scoreTitle">Score:</string>
    <string name="duplicate_detect_question">Are these photos the same?</string>
    <string name="duplicate_detect_may_exist">This challenge may already exist</string>
    <string name="desired_distance_input">Desired Distance:</string>
    <string name="desired_distance_min">Very Close</string>
    <string name="desired_distance_max">Very Far</string>
    <string name="desired_difficulty_input">Desired Difficulty:</string>
    <string name="desired_difficulty_min">Very Easy</string>
    <string name="desired_difficulty_max">Very Hard</string>
    <string name="enter_username_direction">Enter username</string>
    <string name="submit_button_text">Submit</string>
</resources>