<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/start_challenge_image"
        android:rotation="90"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/start_challenge_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:text="@string/distance" />

    <TextView
        android:id="@+id/start_challenge_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:text="@string/difficulty" />

    <Button
        android:id="@+id/start_challenge_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/start_button_text" />

    <Button
        android:id="@+id/reroll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/reroll_button_text" />

    <!-- Push navigation bar to bottom !-->
    <View android:layout_weight="1" android:layout_height="0dp" android:layout_width="0dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/navigate_ranking_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_military_tech_24"
                android:contentDescription="@string/navigate_ranking_tab_description" />

            <ImageButton
                android:id="@+id/navigate_play_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_map_24"
                android:contentDescription="@string/navigate_play_tab_description" />

            <ImageButton
                android:id="@+id/navigate_create_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_photo_camera_24"
                android:contentDescription="@string/navigate_create_tab_description" />

            <ImageButton
                android:id="@+id/navigate_profile_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_person_outline_24"
                android:contentDescription="@string/navigate_profile_tab_description" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</LinearLayout>