<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <fragment
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="30dp"
        tools:context=".MapsActivity"
        class="com.google.android.gms.maps.SupportMapFragment"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:text="@string/scoreTitle"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/navigate_ranking_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_military_tech_24"
                android:contentDescription="@string/navigate_ranking_tab_description" />

            <ImageButton
                android:id="@+id/navigate_play_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_map_24"
                android:contentDescription="@string/navigate_play_tab_description" />

            <ImageButton
                android:id="@+id/navigate_create_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_photo_camera_24"
                android:contentDescription="@string/navigate_create_tab_description" />

            <ImageButton
                android:id="@+id/navigate_profile_tab_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_person_outline_24"
                android:contentDescription="@string/navigate_profile_tab_description" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</LinearLayout>